// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should match snapshot 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    color="#6B6B78"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(107, 107, 120, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#6B6B78"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4285229944,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#6B6B78"
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        default
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Tag /> should match snapshot with custom icon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    color="#6B6B78"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(107, 107, 120, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#6B6B78"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4285229944,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#6B6B78"
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        default with custom icon
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Tag /> should match snapshot with full prop 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    color="#6B6B78"
    full={true}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(107, 107, 120, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#6B6B78"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4285229944,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#6B6B78"
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        full
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Tag /> should match snapshot with variant prop 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    color="#231B22"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(35, 27, 34, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#231B22"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4280490786,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#231B22"
        style={
          Array [
            Object {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        primary
      </Text>
    </View>
  </View>
  <View
    color="#D8385E"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(216, 56, 94, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#D8385E"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4292360286,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#D8385E"
        style={
          Array [
            Object {
              "color": "#D8385E",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        secondary
      </Text>
    </View>
  </View>
  <View
    color="#D8385E"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(216, 56, 94, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#D8385E"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4292360286,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#D8385E"
        style={
          Array [
            Object {
              "color": "#D8385E",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        vibin
      </Text>
    </View>
  </View>
  <View
    color="#1D856C"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(29, 133, 108, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#1D856C"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4280124780,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#1D856C"
        style={
          Array [
            Object {
              "color": "#1D856C",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        hope
      </Text>
    </View>
  </View>
  <View
    color="#FFC24C"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 194, 76, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#FFC24C"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4294951500,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#FFC24C"
        style={
          Array [
            Object {
              "color": "#FFC24C",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        energy
      </Text>
    </View>
  </View>
  <View
    color="#7068D4"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(112, 104, 212, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#7068D4"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4285556948,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#7068D4"
        style={
          Array [
            Object {
              "color": "#7068D4",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        relax
      </Text>
    </View>
  </View>
  <View
    color="#FFB0A7"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 176, 167, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#FFB0A7"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4294946983,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#FFB0A7"
        style={
          Array [
            Object {
              "color": "#FFB0A7",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        peace
      </Text>
    </View>
  </View>
  <View
    color="#FF874C"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 135, 76, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#FF874C"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4294936396,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#FF874C"
        style={
          Array [
            Object {
              "color": "#FF874C",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        verve
      </Text>
    </View>
  </View>
  <View
    color="#FF4438"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 68, 56, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#FF4438"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4294919224,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#FF4438"
        style={
          Array [
            Object {
              "color": "#FF4438",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        uplift
      </Text>
    </View>
  </View>
  <View
    color="#710252"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(113, 2, 82, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#710252"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4285596242,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#710252"
        style={
          Array [
            Object {
              "color": "#710252",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        deepPurple
      </Text>
    </View>
  </View>
  <View
    color="#231B22"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(35, 27, 34, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#231B22"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4280490786,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#231B22"
        style={
          Array [
            Object {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        stamina
      </Text>
    </View>
  </View>
  <View
    color="#6B6B78"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(107, 107, 120, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#6B6B78"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4285229944,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#6B6B78"
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        dark
      </Text>
    </View>
  </View>
  <View
    color="#9898A6"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(152, 152, 166, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#9898A6"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4288190630,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#9898A6"
        style={
          Array [
            Object {
              "color": "#9898A6",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        medium
      </Text>
    </View>
  </View>
  <View
    color="#6B6B78"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(107, 107, 120, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#6B6B78"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4285229944,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#6B6B78"
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        deep
      </Text>
    </View>
  </View>
  <View
    color="#D7D7E0"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(215, 215, 224, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#D7D7E0"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4292335584,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#D7D7E0"
        style={
          Array [
            Object {
              "color": "#D7D7E0",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        light
      </Text>
    </View>
  </View>
  <View
    color="#F5F5FA"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(245, 245, 250, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#F5F5FA"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4294309370,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#F5F5FA"
        style={
          Array [
            Object {
              "color": "#F5F5FA",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        clear
      </Text>
    </View>
  </View>
  <View
    color="#FFFFFF"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        bbHeight={12}
        bbWidth={14}
        fill="#FFFFFF"
        focusable={false}
        height={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginRight": 5,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 14,
            },
          ]
        }
        width={14}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              4294967295,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            Array [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        color="#FFFFFF"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        white
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Tag /> should match snapshot with without icon 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    color="#6B6B78"
    full={false}
    style={
      Array [
        Object {
          "backgroundColor": "rgba(107, 107, 120, 0.25)",
          "borderRadius": 8,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "auto",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        color="#6B6B78"
        style={
          Array [
            Object {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        default without icon
      </Text>
    </View>
  </View>
</View>
`;
